--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -640,9 +640,9 @@ html {
 }
 
 @media (hover:hover) {
-  .checkbox-secondary:hover {
+  .checkbox-primary:hover {
     --tw-border-opacity: 1;
-    border-color: hsl(var(--s) / var(--tw-border-opacity));
+    border-color: hsl(var(--p) / var(--tw-border-opacity));
   }
 
   .label a:hover {
@@ -1408,26 +1408,26 @@ html {
       );
 }
 
-.checkbox-secondary {
-  --chkbg: var(--s);
-  --chkfg: var(--sc);
+.checkbox-primary {
+  --chkbg: var(--p);
+  --chkfg: var(--pc);
   --tw-border-opacity: 1;
-  border-color: hsl(var(--s) / var(--tw-border-opacity));
+  border-color: hsl(var(--p) / var(--tw-border-opacity));
 }
 
-.checkbox-secondary:focus-visible {
-  outline-color: hsl(var(--s) / 1);
+.checkbox-primary:focus-visible {
+  outline-color: hsl(var(--p) / 1);
 }
 
-.checkbox-secondary:checked,
-    .checkbox-secondary[checked="true"],
-    .checkbox-secondary[aria-checked="true"] {
+.checkbox-primary:checked,
+    .checkbox-primary[checked="true"],
+    .checkbox-primary[aria-checked="true"] {
   --tw-border-opacity: 1;
-  border-color: hsl(var(--s) / var(--tw-border-opacity));
+  border-color: hsl(var(--p) / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
-  background-color: hsl(var(--s) / var(--tw-bg-opacity));
+  background-color: hsl(var(--p) / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: hsl(var(--sc) / var(--tw-text-opacity));
+  color: hsl(var(--pc) / var(--tw-text-opacity));
 }
 
 .checkbox:disabled {
@@ -1763,13 +1763,13 @@ html {
   outline-color: hsl(var(--bc) / 0.2);
 }
 
-.textarea-secondary {
+.textarea-primary {
   --tw-border-opacity: 1;
-  border-color: hsl(var(--s) / var(--tw-border-opacity));
+  border-color: hsl(var(--p) / var(--tw-border-opacity));
 }
 
-.textarea-secondary:focus {
-  outline-color: hsl(var(--s) / 1);
+.textarea-primary:focus {
+  outline-color: hsl(var(--p) / 1);
 }
 
 .textarea-disabled,
@@ -2394,11 +2394,9 @@ html {
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 640px) {
-  @media not all and (min-width: 1024px) {
-    .sm\:max-lg\:hidden {
-      display: none;
-    }
+@media not all and (min-width: 1280px) {
+  .max-xl\:hidden {
+    display: none;
   }
 }
 
