Init: show server error in forum creation

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2451,6 +2451,10 @@ html {
   place-items: center;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .items-center {
   align-items: center;
 }
