Init: prevent creation of forum with empty name

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2451,12 +2451,12 @@ html {
   place-items: center;
 }
 
-.content-center {
-  align-content: center;
-}
-
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-evenly {
