Init: start adding comment component

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2744,6 +2744,10 @@ html {
   gap: 0.5rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
